PR: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@193224 13f79535-47bb-0310-9956-ffa450edef68

--- a/Makefile.rules
+++ b/Makefile.rules
@@ -8,7 +8,7 @@ JAVAC = javac
 #JAVAC_ARGS = -g $(BASEDIR)/generated:$(CLASSPATH)
 
 # following class path is for CygWin bash
-JAVAC_ARGS = -g:none -classpath "$(BASEDIR)/generated;$(CLASSPATH)"
+JAVAC_ARGS = -g:none -classpath "$(BASEDIR)/src;$(BASEDIR)/generated;$(CLASSPATH)"
 
 FIND=find
 TAR=tar
