PR: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@193229 13f79535-47bb-0310-9956-ffa450edef68

--- a/Makefile.rules
+++ b/Makefile.rules
@@ -9,6 +9,7 @@ JAVAC = javac
 
 # following class path is for CygWin bash
 JAVAC_ARGS = -g:none -classpath "$(BASEDIR)/src;$(BASEDIR)/generated;$(CLASSPATH)"
+GEN_JAVAC_ARGS = -g:none -classpath "../src;$(CLASSPATH)"
 
 FIND=find
 TAR=tar
