incorporated the PDF side of simple-link support from Arved Sandstrom, ie org.apache.fop.pdf has additional classes for producing PDF documents with links
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@193234 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/org/apache/fop/pdf/Makefile
+++ b/src/org/apache/fop/pdf/Makefile
@@ -5,9 +5,13 @@ include $(BASEDIR)/Makefile.rules
 
 SUBDIRS=
 
-SOURCES=PDFDocument.java \
+SOURCES=PDFAction.java \
+	PDFAnnotList.java \
+	PDFDocument.java \
+	PDFFileSpec.java \
 	PDFFont.java \
 	PDFInfo.java \
+	PDFLink.java \
 	PDFObject.java \
 	PDFPage.java \
 	PDFPages.java \
