Partial implementation of keep-with-next (doesn't yet remove area from previous page when fo is moved to next page to ensure keep). The layout method on each FO now returns a Status object rather than an int to allow for more information to be passed back in the future.
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@193240 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/org/apache/fop/fo/Makefile
+++ b/src/org/apache/fop/fo/Makefile
@@ -15,7 +15,8 @@ SOURCES=FONode.java \
 	Property.java \
 	PropertyList.java \
 	PropertyListBuilder.java \
-	StandardElementMapping.java
+	StandardElementMapping.java \
+	Status.java
 
 CLASSES=$(SOURCES:.java=.class)
 
