corrected omissions in a couple of Makefiles noted by Eric Schaeffer
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@193243 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/org/apache/fop/fo/flow/Makefile
+++ b/src/org/apache/fop/fo/flow/Makefile
@@ -13,6 +13,7 @@ SOURCES=Block.java \
 	Flow.java \
 	InlineSequence.java \
 	ListBlock.java \
+	ListItem.java \
 	ListItemBody.java \
 	ListItemLabel.java \
 	PageNumber.java \
