--- a/src/org/apache/fop/fo/Makefile
+++ b/src/org/apache/fop/fo/Makefile
@@ -7,7 +7,8 @@ SUBDIRS=flow \
 	pagination 
 
 
-SOURCES=FONode.java \
+SOURCES=ElementMapping.java \
+	FONode.java \
 	FOText.java \
 	FOTreeBuilder.java \
 	FObj.java \
