Added AWT Viewer contributed by Albers+Frommberger (af-software.de)
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@193244 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/org/apache/fop/render/awt/Makefile
+++ b/src/org/apache/fop/render/awt/Makefile
@@ -1,19 +1,11 @@
 
 
-BASEDIR:=../../../../..
+BASEDIR:=../../../../../..
 include $(BASEDIR)/Makefile.rules
 
 SUBDIRS=
 
-SOURCES=AWTCommandLine.java \
-	CommandLine.java \
-	Driver.java \
-	ErrorHandler.java \
-	FOPException.java \
-	Version.java \
-	XTCommandLine.java
-
-
+SOURCES=AWTRenderer.java
 
 CLASSES=$(SOURCES:.java=.class)
 
