added new make target 'docs' to generate JavaDoc docs
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@193254 13f79535-47bb-0310-9956-ffa450edef68

--- a/Makefile.rules
+++ b/Makefile.rules
@@ -17,6 +17,9 @@ JAR=jar
 
 XT=${JAVA} com.jclark.xsl.sax.Driver
 
+JAVADOC = javadoc
+JAVADOC_ARGS = -overview $(BASEDIR)/src/overview.html -sourcepath "$(BASEDIR)/src;$(BASEDIR)/generated" -classpath "$(BASEDIR)/src;$(BASEDIR)/generated;$(CLASSPATH)" -d $(APIDOCDIR)
+
 TARGETS = all clean clobber
 
 .SUFFIXES: .java .class .xml $(SUFFIXES)
