added more of Arved Sandtrom's simple-link implementation. New class LinkSet and modifications to Page and PDFRenderer to contain and make use of this class respectively
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@193258 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/org/apache/fop/layout/Makefile
+++ b/src/org/apache/fop/layout/Makefile
@@ -18,6 +18,7 @@ SOURCES=AlternatingPageMasterFactory.java \
 	InlineArea.java \
 	InlineSpace.java \
 	LineArea.java \
+	LinkSet.java \
 	Page.java \
 	PageMaster.java \
 	PageMasterFactory.java \
