incorporated rest of Arved Sandstrom's simple-link implementation: the FO and layout class modifications
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@193259 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/org/apache/fop/fo/flow/Makefile
+++ b/src/org/apache/fop/fo/flow/Makefile
@@ -17,6 +17,7 @@ SOURCES=Block.java \
 	ListItemBody.java \
 	ListItemLabel.java \
 	PageNumber.java \
+	SimpleLink.java \
 	StaticContent.java \
 	Table.java \
 	TableBody.java \
