at Chris Maden's suggestion, fixed bottom-level Makefiles to not try and recurse into sub directories as it leads to syntax illegal in some shells
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@193269 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/org/apache/fop/apps/Makefile
+++ b/src/org/apache/fop/apps/Makefile
@@ -17,9 +17,9 @@ SOURCES=AWTCommandLine.java \
 
 CLASSES=$(SOURCES:.java=.class)
 
-all: $(CLASSES) allsubs
+all: $(CLASSES)
 
-clean: cleanme cleansubs
+clean: cleanme
 
 cleanme:
 	rm -f *.class
