--- a/src/org/apache/fop/datatypes/Makefile
+++ b/src/org/apache/fop/datatypes/Makefile
@@ -11,9 +11,9 @@ SOURCES=ColorType.java \
 
 CLASSES=$(SOURCES:.java=.class)
 
-all: $(CLASSES) allsubs
+all: $(CLASSES)
 
-clean: cleanme cleansubs
+clean: cleanme
 
 cleanme:
 	rm -f *.class
