--- a/src/org/apache/fop/fo/flow/Makefile
+++ b/src/org/apache/fop/fo/flow/Makefile
@@ -27,9 +27,9 @@ SOURCES=Block.java \
 
 CLASSES=$(SOURCES:.java=.class)
 
-all: $(CLASSES) allsubs
+all: $(CLASSES)
 
-clean: cleanme cleansubs
+clean: cleanme
 
 cleanme:
 	rm -f *.class
