--- a/src/org/apache/fop/image/Makefile
+++ b/src/org/apache/fop/image/Makefile
@@ -14,9 +14,9 @@ SOURCES=BmpBwImage.java \
 
 CLASSES=$(SOURCES:.java=.class)
 
-all: $(CLASSES) allsubs
+all: $(CLASSES)
 
-clean: cleanme cleansubs
+clean: cleanme
 
 cleanme:
 	rm -f *.class
