--- a/src/org/apache/fop/pdf/Makefile
+++ b/src/org/apache/fop/pdf/Makefile
@@ -22,9 +22,9 @@ SOURCES=PDFAction.java \
 
 CLASSES=$(SOURCES:.java=.class)
 
-all: $(CLASSES) allsubs
+all: $(CLASSES)
 
-clean: cleanme cleansubs
+clean: cleanme
 
 cleanme:
 	rm -f *.class
