--- a/src/org/apache/fop/render/awt/Makefile
+++ b/src/org/apache/fop/render/awt/Makefile
@@ -9,9 +9,9 @@ SOURCES=AWTRenderer.java
 
 CLASSES=$(SOURCES:.java=.class)
 
-all: $(CLASSES) allsubs
+all: $(CLASSES)
 
-clean: cleanme cleansubs
+clean: cleanme
 
 cleanme:
 	rm -f *.class
