--- a/src/org/apache/fop/render/pdf/Makefile
+++ b/src/org/apache/fop/render/pdf/Makefile
@@ -12,9 +12,9 @@ SOURCES= \
 
 CLASSES=$(SOURCES:.java=.class)
 
-all: $(CLASSES) allsubs
+all: $(CLASSES)
 
-clean: cleanme cleansubs
+clean: cleanme
 
 cleanme:
 	rm -f *.class
