--- a/src/org/apache/fop/svg/Makefile
+++ b/src/org/apache/fop/svg/Makefile
@@ -19,9 +19,9 @@ SOURCES=Graphic.java \
 
 CLASSES=$(SOURCES:.java=.class)
 
-all: $(CLASSES) allsubs
+all: $(CLASSES)
 
-clean: cleanme cleansubs
+clean: cleanme
 
 cleanme:
 	rm -f *.class
