--- a/src/org/apache/fop/viewer/Makefile
+++ b/src/org/apache/fop/viewer/Makefile
@@ -13,9 +13,9 @@ SOURCES=Command.java \
 
 CLASSES=$(SOURCES:.java=.class)
 
-all: $(CLASSES) allsubs
+all: $(CLASSES)
 
-clean: cleanme cleansubs
+clean: cleanme
 
 cleanme:
 	rm -f *.class
