--- a/src/org/apache/fop/layout/Makefile
+++ b/src/org/apache/fop/layout/Makefile
@@ -30,9 +30,9 @@ SOURCES=AlternatingPageMasterFactory.java \
 
 CLASSES=$(SOURCES:.java=.class)
 
-all: $(CLASSES) allsubs
+all: $(CLASSES)
 
-clean: cleanme cleansubs
+clean: cleanme
 
 cleanme:
 	rm -f *.class
