Adds missing files (submitted by Sean Timm)
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@193280 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/org/apache/fop/viewer/Makefile
+++ b/src/org/apache/fop/viewer/Makefile
@@ -8,8 +8,15 @@ SUBDIRS=
 SOURCES=Command.java \
 	DocumentPanel.java \
 	IconToolBar.java \
+	LoadableProperties.java \
+	MessageException.java \
+	MessagesDialog.java \
 	PreviewDialog.java \
-	PreviewDialogAboutBox.java
+	PreviewDialogAboutBox.java \
+	ProgressListener.java \
+	SecureResourceBundle.java \
+	Translator.java \
+	UserMessage.java
 
 CLASSES=$(SOURCES:.java=.class)
 
@@ -24,4 +31,5 @@ $(TARGETS:%=%subs): %subs :
 	for dir in $(SUBDIRS) ; do \
 		(cd $$dir && pwd && $(MAKE) $(MFLAGS) $*) || exit 1 ; \
 	done
+
 
