changes in the Makefile
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@193363 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/org/apache/fop/image/Makefile
+++ b/src/org/apache/fop/image/Makefile
@@ -5,12 +5,11 @@ include $(BASEDIR)/Makefile.rules
 
 SUBDIRS=
 
-SOURCES=BmpBwImage.java \
-	BmpColImage.java \
-	ImageArea.java \
+SOURCES=FopImageException.java \
 	FopImage.java \
+	ImageArea.java \
 	FopImageFactory.java \
-	GifJpegImage.java
+	JimiImage.java
 
 CLASSES=$(SOURCES:.java=.class)
 
