changes in Makefile
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@193375 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/org/apache/fop/pdf/Makefile
+++ b/src/org/apache/fop/pdf/Makefile
@@ -18,6 +18,9 @@ SOURCES=PDFAction.java \
 	PDFResources.java \
 	PDFRoot.java \
 	PDFStream.java \
+	PDFFilterException.java \
+	PDFFilter.java \
+	PDFBinaryStream.java \
 	PDFXObject.java
 
 CLASSES=$(SOURCES:.java=.class)
