modify makefile to compile
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@193391 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/org/apache/fop/image/Makefile
+++ b/src/org/apache/fop/image/Makefile
@@ -9,6 +9,8 @@ SOURCES=FopImageException.java \
 	FopImage.java \
 	ImageArea.java \
 	FopImageFactory.java \
+	FopImageConsumer.java \
+	GifJpegImage.java \
 	JimiImage.java
 
 CLASSES=$(SOURCES:.java=.class)
