Fix: removes forgotten closing comment brackets
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@193402 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -322,7 +322,7 @@ Sometimes ant gives out this warnings, but the build is finished without any pro
     <echo message="Copying doc files "/>
     <copydir src="${docs.dir}" dest="${build.docs}" />
     <copydir src="${lib.dir}" dest="${build.dir}/${lib.dir}" />
-    <copyfile src="build.xml" dest="${build.dir}/build.xml" /> -->
+    <copyfile src="build.xml" dest="${build.dir}/build.xml" /> 
     <copyfile src="${basedir}/README" dest="${build.dir}/README" />
     <copyfile src="${basedir}/STATUS" dest="${build.dir}/STATUS" />
     <copyfile src="${basedir}/LICENSE" dest="${build.dir}/LICENSE" />
