--- a/docs/examples/build.xml
+++ b/docs/examples/build.xml
@@ -47,8 +47,15 @@
     <fop fofile="${foDir}/list.fo"   pdffile="${testDir}/list.pdf"/>
     <fop fofile="${foDir}/link.fo"   pdffile="${testDir}/link.pdf"/> 
     <fop fofile="${foDir}/border.fo"   pdffile="${testDir}/border.pdf"/> 
-    <fop fofile="${foDir}/images.fo"   pdffile="${testDir}/images.pdf"/> 
     <fop fofile="${foDir}/extensive.fo"   pdffile="${testDir}/extensive.pdf"/> 
+    <fop fofile="${foDir}/images.fo"   pdffile="${testDir}/images.pdf"/> 
+    <fop fofile="${foDir}/readme.fo"   pdffile="${testDir}/readme.pdf"/> 
+    <fop fofile="${foDir}/fonts.fo"   pdffile="${testDir}/fonts.pdf"/> 
+  </target>
+
+
+  <target name="image" depends="init">
+    <fop fofile="${foDir}/images.fo"   pdffile="${testDir}/images.pdf"/> 
   </target>
 
   <!-- =================================================================== -->
@@ -57,7 +64,7 @@
   <target name="compare" depends ="creating new test pdf files">
     <compare referenceDirectory  = "${referenceDir}" 
              testDirectory       = "${testDir}" 
-             filenames           = "normal.pdf,table.pdf,list.pdf,link.pdf,border.pdf,images.pdf,extensive.pdf"/>
+             filenames           = "normal.pdf,table.pdf,list.pdf,link.pdf,border.pdf,images.pdf,extensive.pdf,readme.pdf,fonts.pdf"/>
   </target>
 
   <!-- =================================================================== -->
@@ -69,8 +76,10 @@
     <fop fofile="${foDir}/list.fo"   pdffile="${referenceDir}/list.pdf"/>
     <fop fofile="${foDir}/link.fo"   pdffile="${referenceDir}/link.pdf"/>
     <fop fofile="${foDir}/border.fo"   pdffile="${referenceDir}/border.pdf"/>
-    <fop fofile="${foDir}/images.fo"   pdffile="${referenceDir}/images.pdf"/>
     <fop fofile="${foDir}/extensive.fo"   pdffile="${referenceDir}/extensive.pdf"/>
+    <fop fofile="${foDir}/images.fo"   pdffile="${referenceDir}/images.pdf"/>
+    <fop fofile="${foDir}/readme.fo"   pdffile="${referenceDir}/readme.pdf"/>
+    <fop fofile="${foDir}/fonts.fo"   pdffile="${referenceDir}/fonts.pdf"/>     
   </target>
 
 
