lower case fop.xml so it will work on unix
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@193524 13f79535-47bb-0310-9956-ffa450edef68

--- a/docs/xml-docs/build.xml
+++ b/docs/xml-docs/build.xml
@@ -41,7 +41,7 @@ These are the meaningful targets for this build file:
   <!-- compiles all xml files into one and removes the proprietary sbk protocol -->
   <!-- =================================================================== -->
   <target name="prepare-files" depends="init">
-    <collectDocFiles configFile="Fop.xml" outFile="fop.pdf"/>
+    <collectDocFiles configFile="fop.xml" outFile="fop.pdf"/>
   </target>
 
   <!-- =================================================================== -->
