updates examples to conform to new allowed values for flow-name
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@193583 13f79535-47bb-0310-9956-ffa450edef68

--- a/docs/examples/build.xml
+++ b/docs/examples/build.xml
@@ -2,7 +2,7 @@
 
 <!-- =========================================================================== -->
 
-<project default="runtest" basedir=".">
+<project default="creating new test pdf files" basedir=".">
 
   <!-- =================================================================== -->
   <!-- Initialization target                                               -->
