adds example file for fo:leader and replaces display-rule with leader in existing files
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@193604 13f79535-47bb-0310-9956-ffa450edef68

--- a/docs/examples/build.xml
+++ b/docs/examples/build.xml
@@ -51,6 +51,7 @@
     <fop fofile="${foDir}/images.fo"   pdffile="${testDir}/images.pdf"/> 
     <fop fofile="${foDir}/readme.fo"   pdffile="${testDir}/readme.pdf"/> 
     <fop fofile="${foDir}/fonts.fo"   pdffile="${testDir}/fonts.pdf"/> 
+    <fop fofile="${foDir}/leader.fo"   pdffile="${testDir}/leader.pdf"/> 
   </target>
 
 
