Domagoj Cosic's patch, and changed FOP CVS version to "0.15cvs" so people's bug reports are understandable.
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@193717 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -121,7 +121,7 @@ Sometimes ant gives out this warnings, but the build is finished without any pro
     <tstamp/>
     <property name="Name" value="Fop"/>
     <property name="name" value="fop"/>
-    <property name="version" value="0.13"/>
+    <property name="version" value="0.15cvs"/>
     <property name="year" value="1999-2000"/>
 
     <echo message="------------------- ${Name} ${version} [${year}] ----------------"/>
