Apply's Christian Geisert's text decoration (underline) patch. I updated the readme.fo so it reports the latest released version of fop as 0.14, rather than 12.0(????). I fixed the build.xml so it will build reference PDFs for the last two added examples. I added Christian's textdeko.fo example file as one of the examples.
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@193730 13f79535-47bb-0310-9956-ffa450edef68

--- a/docs/examples/build.xml
+++ b/docs/examples/build.xml
@@ -52,6 +52,7 @@
     <fop fofile="${foDir}/readme.fo"   pdffile="${testDir}/readme.pdf"/> 
     <fop fofile="${foDir}/fonts.fo"   pdffile="${testDir}/fonts.pdf"/> 
     <fop fofile="${foDir}/leader.fo"   pdffile="${testDir}/leader.pdf"/> 
+    <fop fofile="${foDir}/textdeko.fo"   pdffile="${testDir}/textdeko.pdf"/> 
   </target>
 
 
@@ -81,6 +82,8 @@
     <fop fofile="${foDir}/images.fo"   pdffile="${referenceDir}/images.pdf"/>
     <fop fofile="${foDir}/readme.fo"   pdffile="${referenceDir}/readme.pdf"/>
     <fop fofile="${foDir}/fonts.fo"   pdffile="${referenceDir}/fonts.pdf"/>     
+    <fop fofile="${foDir}/leader.fo"   pdffile="${referenceDir}/leader.pdf"/> 
+    <fop fofile="${foDir}/textdeko.fo"   pdffile="${referenceDir}/textdeko.pdf"/> 
   </target>
 
 
