Adds textdeko.fo file example. Applies Art Welch's JDK 1.1.x compatibility fixes.
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@193739 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -157,9 +157,9 @@ Sometimes ant gives out this warnings, but the build is finished without any pro
 
     <property name="ignore_jdk11"
               value="org/apache/fop/render/awt/**
-                     ,org/apache/fop/image/analyzer/*
                      ,org/apache/fop/viewer/**
-                     ,org/apache/fop/image/*
+                     ,**/GifJpegImage.java
+                     ,**/JimiImage.java
                      ,**/PrintCommandLine.java
                      ,**/AWTCommandLine.java"/>
 
