Add inhprop and normalex
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@193779 13f79535-47bb-0310-9956-ffa450edef68

--- a/docs/examples/build.xml
+++ b/docs/examples/build.xml
@@ -53,6 +53,8 @@
     <fop fofile="${foDir}/fonts.fo"   pdffile="${testDir}/fonts.pdf"/> 
     <fop fofile="${foDir}/leader.fo"   pdffile="${testDir}/leader.pdf"/> 
     <fop fofile="${foDir}/textdeko.fo"   pdffile="${testDir}/textdeko.pdf"/> 
+    <fop fofile="${foDir}/inhprop.fo" pdffile="${testDir}/inhprop.pdf"/>
+    <fop fofile="${foDir}/normalex.fo" pdffile="${testDir}/normalex.pdf"/>
   </target>
 
 
